Sync project setup with that of our Lein template

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,35 @@
-/target
-/classes
-/checkouts
-pom.xml
-pom.xml.asc
-*.jar
+*.bak
 *.class
+*.class
+*.iml
+*.jar
+*.jar
+*.log
+*.orig
+*.tmp
+*~
+.*.swo
+.*.swp
+.DS_Store
+.eastwood
+.eastwood
+.hg/
+.hgignore
+.idea/
+.nrepl-port
+.rebl/
+.repl
+/.lein-*
 /.lein-*
 /.nrepl-port
-.eastwood
-.hgignore
-.hg/
+/checkouts
+/classes
+/logs/
+/target
+build/
+coverage/
+out/
+pom.xml
+pom.xml.asc
+profiles.clj
+repl-port
