--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
     # specify the version you desire here
-    - image: circleci/clojure:lein-2.8.1
+    - image: circleci/clojure:lein-2.8.1-node
 
     # Specify service dependencies here if necessary
     # CircleCI maintains a library of pre-built images
@@ -31,7 +31,7 @@ jobs:
         # fallback to using the latest cache if no exact match is found
         - v1-dependencies-
 
-    - run: lein deps
+    - run: lein with-profile -dev,+ci deps
 
     - save_cache:
         paths:
@@ -39,7 +39,7 @@ jobs:
         key: v1-dependencies-{{ checksum "project.clj" }}
 
     - run:
-        name: 'Run tests and report coverage'
+        name: 'Run JVM tests, reporting coverage'
         command: lein trampoline cloverage --lcov --junit -o coverage/
 
     - store_test_results:
@@ -48,19 +48,23 @@ jobs:
     - store_artifacts:
         path: ~/repo/coverage
 
-  release:
+  jfrog:
     docker:
-      - image: circleci/clojure:lein-2.8.1
+      - image: circleci/clojure:lein-2.8.1-node
 
     working_directory: ~/repo
 
     steps:
-      - checkout
-
       - run:
           name: import GPG key
           command: echo -e "$GPG_KEY_V2" | gpg --import
+          
+      - checkout
 
+      - run:
+          name: Perform pre-release sanity check
+          command: lein with-profile -dev,+ci run -m nedap.ci.release-workflow.api sanity-check
+          
       - run:
           name: release to JFrog
           command: lein deploy
@@ -75,15 +79,13 @@ workflows:
             branches:
               only: /.*/
             tags:
-              only: /^v\d+\.\d+\.\d+(-[A-Z]*)*$/
-
-
-      - release:
+              only: /^v\d+\.\d+\.\d+(-alpha\d+)?$/              
+      - jfrog:
           context: JFrog
-          requires:
+          requires: 
             - build
           filters:
             branches:
               ignore: /.*/
             tags:
-              only: /^v\d+\.\d+\.\d+(-[A-Z]*)*$/
+              only: /^v\d+\.\d+\.\d+(-alpha\d+)?$/
