--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,8 @@ jobs:
           name: 'Run JVM tests, reporting coverage'
           command: lein with-profile -dev,+test trampoline cloverage --lcov --junit -o coverage/
       - run:
-          name: 'Ensure production isolation'
-          command: lein with-profile -dev check
+          name: 'Ensure production isolation, check for boxed math'
+          command: lein with-profile -dev,+check check
       - store_test_results:
           path: ~/repo/coverage
       - store_artifacts:
