--- a/nedap.lein-template.properties
+++ b/nedap.lein-template.properties
@@ -5,7 +5,8 @@ nedap.lein-template.lib_prefix=nedap.utils.modular
 nedap.lein-template.gpg_email=releases-staffingsolutions@nedap.com
 nedap.lein-template.use_system=false
 nedap.lein-template.use_cljs=true
-nedap.lein-template.use_clojars=false
-nedap.lein-template.do_license=false
+nedap.lein-template.use_clojars=true
+nedap.lein-template.do_license=true
 nedap.lein-template.use_nvd=false
 nedap.lein-template.use_pedestal=false
+nedap.lein-template.use_ssr=false
