--- a/nedap.lein-template.properties
+++ b/nedap.lein-template.properties
@@ -7,6 +7,7 @@ nedap.lein-template.use_system=false
 nedap.lein-template.use_cljs=true
 nedap.lein-template.use_clojars=true
 nedap.lein-template.do_license=true
+nedap.lein-template.use_cloverage=true
 nedap.lein-template.use_nvd=false
 nedap.lein-template.use_pedestal=false
 nedap.lein-template.use_ssr=false
