--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ commands:
             - v1-dependencies-{{ checksum "project.clj" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-      - run: lein with-profile -dev,+test,+ci deps
+      - run: lein with-profile -dev,+test,+ncrw,+ci deps
       - save_cache:
           paths:
             - ~/.m2
@@ -87,7 +87,7 @@ jobs:
           command: echo -e "$GPG_KEY_V2" | gpg --import
       - run:
           name: Perform pre-release sanity check
-          command: lein with-profile -dev,+ci run -m nedap.ci.release-workflow.api sanity-check
+          command: lein with-profile -dev,+ci,+ncrw run -m nedap.ci.release-workflow.api sanity-check
       - run:
           name: release to JFrog
           command: lein deploy
@@ -130,6 +130,15 @@ workflows:
           context: JFrog
           <<: *test_code_filters
       - test_code:
+          name: "JDK 8, with an old clojurescript dependency on the classpath"
+          jdk_version: openjdk8
+          lein_test_command: lein with-profile -dev,-provided,+ci,+cljs-old do clean, test
+          requires:
+            - "Ensure artifact isolation, inform of boxed math"
+            - cloverage
+          context: JFrog
+          <<: *test_code_filters
+      - test_code:
           name: "JDK 8, with production-like compiler flags"
           jdk_version: openjdk8
           lein_test_command: lein with-profile -dev,+ci,+production do clean, test
@@ -163,6 +172,7 @@ workflows:
             - test_cljs_code
             - cloverage
             - "JDK 8, plain"
+            - "JDK 8, with an old clojurescript dependency on the classpath"
             - "JDK 8, with production-like compiler flags"
             - "JDK 11, plain"
             - "JDK 11, with production-like compiler flags"
