--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,6 +116,7 @@ workflows:
       - deploy:
           context:
             - Clojars
+            - Github
             - GPG
           requires:
             - "Ensure artifact isolation, inform of boxed math"
